@@ -146,6 +146,10 @@ wxAppConsole::~wxAppConsole()
 
 bool wxAppConsole::Initialize(int& argcOrig, wxChar **argvOrig)
 {
+#if wxUSE_INTL
+    GetTraits()->SetLocale();
+#endif // wxUSE_INTL
+
     // remember the command line arguments
     argc = argcOrig;
     argv = argvOrig;
@@ -156,7 +160,7 @@ bool wxAppConsole::Initialize(int& argcOrig, wxChar **argvOrig)
         // the application name is, by default, the name of its executable file
         wxFileName::SplitPath(argv[0], NULL, &m_appName, NULL);
     }
-#endif
+#endif // !__WXPALMOS__
 
     return true;
 }
@@ -502,6 +506,11 @@ GSocketGUIFunctionsTable* wxConsoleAppTraitsBase::GetSocketGUIFunctionsTable()
 // ----------------------------------------------------------------------------
 // wxAppTraits
 // ----------------------------------------------------------------------------
+
+void wxAppTraitsBase::SetLocale()
+{
+    setlocale(LC_ALL, "");
+}
 
 #ifdef __WXDEBUG__
 
